--- a/JQuery/index.html
+++ b/JQuery/index.html
@@ -10,7 +10,9 @@
 
 <script>
   $(document).ready(function() {
-    $("button").addClass("animated bounce");
+    $("#target1").css("color", "red");
+    $("#target1").prop("disabled", true);
+    $("#target4").remove();
   });
 </script>
 
@@ -37,6 +39,3 @@
     </div>
   </div>
 </div>
-
-  
-  
