--- a/frontendprojects/personalportfolio/index.html
+++ b/frontendprojects/personalportfolio/index.html
@@ -129,5 +129,5 @@
 </div>
 </div>
 <div class="footer">
-    <p class="text-center">Made in 2018. All rights Reserved</p>
+    <p class="text-center">Made in 2018. All rights Reserved :)</p>
 </div>
